Refactor to decouple scheduler resolution from scheduler service - Move resolution logic into dedicated SchedulerResolver and test all algorithm names using reflection to collect them - Move scheduling algorithm names into static constants - Define TestHelper for reusable utility methods