@@ -1,19 +1,24 @@
 package taskmanager.api.service;
 
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.Mock;
 
+import taskmanager.api.model.Task;
 import taskmanager.api.repository.TaskRepository;
-import taskmanager.api.scheduler.SchedulerFactory;
+import taskmanager.api.scheduler.Scheduler;
+import taskmanager.api.scheduler.SchedulerResolver;
+import taskmanager.api.service.scheduler.SchedulerService;
 
-import java.util.Collections;
-import java.util.Optional;
+import java.util.List;
+import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
+import static taskmanager.api.utils.TestHelper.getAllAlgorithmNames;
 
 @ExtendWith(MockitoExtension.class)
 class SchedulerServiceTests {
@@ -22,26 +27,38 @@ class SchedulerServiceTests {
     private TaskRepository taskRepository;
 
     @Mock
-    private SchedulerFactory schedulerFactory;
+    private SchedulerResolver schedulerResolver;
+
+    @Mock
+    private Scheduler mockScheduler;
 
     private SchedulerService schedulerService;
 
     @BeforeEach
     void setUp() {
-
-        schedulerService = new SchedulerService(taskRepository, schedulerFactory);
+        schedulerService = new SchedulerService(taskRepository, schedulerResolver);
     }
 
-    @Test
-    void scheduleTasks_throwsExceptionForUnknownAlgorithm() {
-        when(taskRepository.findAll()).thenReturn(Collections.emptyList());
-        when(schedulerFactory.getScheduler("imaginary-algorithm")).thenReturn(Optional.empty());
+    @ParameterizedTest
+    @MethodSource("allAlgorithmNames")
+    void should_ScheduleTasksUsingResolvedScheduler(String algorithm) {
+        // Arrange
+        var mockTasks = List.of(new Task());
+        var scheduledTasks = List.of(new Task());
 
-        IllegalArgumentException exception = assertThrows(
-                IllegalArgumentException.class,
-                () -> schedulerService.scheduleTasks("imaginary-algorithm")
-        );
+        when(taskRepository.findAll()).thenReturn(mockTasks);
+        when(schedulerResolver.resolve(algorithm)).thenReturn(mockScheduler);
+        when(mockScheduler.schedule(mockTasks)).thenReturn(scheduledTasks);
 
-        assertEquals("Unknown algorithm: imaginary-algorithm", exception.getMessage());
+        // Act
+        var result = schedulerService.scheduleTasks(algorithm);
+
+        // Assert
+        assertEquals(scheduledTasks, result);
+        verify(taskRepository).findAll();
+        verify(schedulerResolver).resolve(algorithm);
+        verify(mockScheduler).schedule(mockTasks);
     }
+
+    static Stream<String> allAlgorithmNames() { return getAllAlgorithmNames(); }
 }
